--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.0",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-state-sync": "^3.1.4",
+    "redux-thunk": "^2.4.2",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.4"
   },
@@ -55,6 +58,7 @@
   "devDependencies": {
     "@apollo/client": "^3.8.1",
     "@types/react-plotly.js": "^2.6.0",
+    "@types/redux-state-sync": "^3.1.5",
     "graphql-ws": "^5.14.0"
   }
 }
