--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "apollo-link-retry": "^2.2.16",
     "framer-motion": "^10.16.0",
     "plotly.js-basic-dist": "^2.25.2",
-    "prettier": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-plotly.js": "^2.6.0",
@@ -35,7 +34,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint 'src/**/*.{ts,tsx}' --max-warnings=0",
+    "prettier-check": "prettier --check 'src/**/*.{ts,tsx}'",
+    "check-types": "tsc",
+    "all-checks": "npm run lint && npm run prettier-check && npm run check-types"
   },
   "eslintConfig": {
     "extends": [
@@ -59,6 +62,14 @@
     "@apollo/client": "^3.8.1",
     "@types/react-plotly.js": "^2.6.0",
     "@types/redux-state-sync": "^3.1.5",
-    "graphql-ws": "^5.14.0"
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "graphql-ws": "^5.14.0",
+    "prettier": "3.0.3"
+  },
+  "prettier": {
+    "trailingComma": "none",
+    "arrowParens": "avoid"
   }
 }
