--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "cs-web-striptool",
   "version": "0.1.0",
   "private": true,
+  "main": "main.js",
+  "homepage": "./",
   "dependencies": {
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
@@ -11,7 +13,6 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.3",
-    "@types/node": "^20.5.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "apollo-link-retry": "^2.2.16",
@@ -38,7 +39,10 @@
     "lint": "eslint 'src/**/*.{ts,tsx}' --max-warnings=0",
     "prettier-check": "prettier --check 'src/**/*.{ts,tsx}'",
     "check-types": "tsc",
-    "all-checks": "npm run lint && npm run prettier-check && npm run check-types"
+    "all-checks": "npm run lint && npm run prettier-check && npm run check-types",
+    "electron:build": "tsc -p electron/tsconfig.json",
+    "electron:prod": "ELECTRON_IS_DEV=0 && npm run build && npm run electron:build && electron ./build/electron/main.js",
+    "electron:dev": "concurrently \"ELECTRON_IS_DEV=1 && npm run electron:build && BROWSER=none npm run start\" \"wait-on http://127.0.0.1:3000 && electron ./build/electron/main.js\""
   },
   "eslintConfig": {
     "extends": [
@@ -60,13 +64,18 @@
   },
   "devDependencies": {
     "@apollo/client": "^3.8.1",
+    "@types/electron": "^1.6.10",
     "@types/react-plotly.js": "^2.6.0",
     "@types/redux-state-sync": "^3.1.5",
+    "concurrently": "^8.2.1",
+    "electron": "^26.3.0",
+    "electron-is-dev": "^2.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
     "graphql-ws": "^5.14.0",
-    "prettier": "3.0.3"
+    "prettier": "3.0.3",
+    "wait-on": "^7.0.1"
   },
   "prettier": {
     "trailingComma": "none",
