Use electron forge to package

--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -12,9 +12,7 @@
     ],
     "paths": {
         "*": ["node_modules/*"]
-    }
-  },
-  "include": [
-    "**/*"
-  ]
+    },
+    "jsx": "react-jsx"
+  }
 }
