--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "cs-web-striptool",
+  "description": "A tool for plotting live data from EPICs PVs",
   "version": "0.1.0",
   "private": true,
-  "main": "main.js",
+  "main": "./build/electron/main.js",
   "homepage": "./",
+  "author": "Abigail Alexander",
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dls-controls/cs-web-striptool.git"
+  },
   "dependencies": {
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
@@ -16,6 +23,7 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "apollo-link-retry": "^2.2.16",
+    "electron-squirrel-startup": "^1.0.0",
     "framer-motion": "^10.16.0",
     "plotly.js-basic-dist": "^2.25.2",
     "react": "^18.2.0",
@@ -32,17 +40,18 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:electron": "electron-forge start",
+    "start:web": "react-scripts start",
     "build": "react-scripts build",
+    "build:electron": "tsc -p electron/tsconfig.json",
+    "package:electron": "electron-forge package",
+    "make:electron": "electron-forge make",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint 'src/**/*.{ts,tsx}' --max-warnings=0",
     "prettier-check": "prettier --check 'src/**/*.{ts,tsx}'",
     "check-types": "tsc",
-    "all-checks": "npm run lint && npm run prettier-check && npm run check-types",
-    "electron:build": "tsc -p electron/tsconfig.json",
-    "electron:prod": "ELECTRON_IS_DEV=0 && npm run build && npm run electron:build && electron ./build/electron/main.js",
-    "electron:dev": "concurrently \"ELECTRON_IS_DEV=1 && npm run electron:build && BROWSER=none npm run start\" \"wait-on http://127.0.0.1:3000 && electron ./build/electron/main.js\""
+    "all-checks": "npm run lint && npm run prettier-check && npm run check-types"
   },
   "eslintConfig": {
     "extends": [
@@ -64,18 +73,21 @@
   },
   "devDependencies": {
     "@apollo/client": "^3.8.1",
+    "@electron-forge/cli": "^6.4.2",
+    "@electron-forge/maker-deb": "^6.4.2",
+    "@electron-forge/maker-rpm": "^6.4.2",
+    "@electron-forge/maker-squirrel": "^6.4.2",
+    "@electron-forge/maker-zip": "^6.4.2",
+    "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
     "@types/electron": "^1.6.10",
     "@types/react-plotly.js": "^2.6.0",
     "@types/redux-state-sync": "^3.1.5",
-    "concurrently": "^8.2.1",
     "electron": "^26.3.0",
-    "electron-is-dev": "^2.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
     "graphql-ws": "^5.14.0",
-    "prettier": "3.0.3",
-    "wait-on": "^7.0.1"
+    "prettier": "3.0.3"
   },
   "prettier": {
     "trailingComma": "none",
