--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "apollo-link-retry": "^2.2.16",
     "electron-squirrel-startup": "^1.0.0",
     "framer-motion": "^10.16.0",
+    "loglevel": "^1.8.1",
     "plotly.js-basic-dist": "^2.25.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
